--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,9 @@
 
         This app is just one piece of a bigger series of apps. You can find the rest of them at https://www.simplemobiletools.com
     </string>
+    <string name="broadcast_before_alarm">Send silent Alarm prior to ringing</string>
+    <string name="has_children">%d silent alarms</string>
+
 
     <!--
         Haven't found some strings? There's more at
