--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -47,6 +47,8 @@
 
         Diese App ist nur eine aus einer größeren Serie von schlichten Apps, welche Sie auf https://www.simplemobiletools.com finden können.
     </string>
+    <string name="broadcast_before_alarm" > Stillen Alarm erstellen</string>
+    <string name="has_children">Stille Alarme: %d </string>
 
     <!--
         Haven't found some strings? There's more at
