Convinience function to update silent alarms automatically when new alarm time is set

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,8 @@
     </string>
 
     <string name="silent_alarm_dialog_title">What is a silent alarm?</string>
+    <string name="update_child_alarm_title">Update Silent Alarms?</string>
+    <string name="update_child_alarm_info">Update silent alarms relative to the new alarm time?</string>
 
 
     <!--
