Feature set alarm via intent

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -71,6 +71,8 @@
     <string name="silent_alarm_dialog_title">Was ist ein stiller Alarm?</string>
     <string name="update_child_alarm_title">Stille Alarme aktualisieren?</string>
     <string name="update_child_alarm_info">Zeiten der stillen Alarme relativ zur neuen Alarmzeit anpassen?</string>
+    <string name="intent_alarm_updated">Alarm \"%1$s\" aktualisiert"</string>
+    <string name="intent_alarm_updated_error">Fehler beim aktualisieren des Alarms \"%1$s\"</string>
     <!--
         Haven't found some strings? There's more at
         https://github.com/SimpleMobileTools/Simple-Commons/tree/master/commons/src/main/res
